# hyscan499

./: .gitignore  CMakeLists.txt  README.md
.config/hyscan/db-profiles/: devdb.ini  updb.ini
.config/hyscan/example-ini/: ame-config.ini  default.ini
.config/hyscan/hw-profiles/: emu.ini  gps.ini  h5sf7.ini  hydra-la.ini  hydra.ini  hydra5.ini
.config/hyscan/map-profiles/: bing-sat.ini
.config/hyscan/offset-profiles/: the_boat_that_rocks.ini
configurator/: CMakeLists.txt  configurator.c  hyscan-configurator.c  hyscan-configurator.h  hyscan-gtk-configurator.c  hyscan-gtk-configurator.h  hyscan-migrate-config.c  hyscan-migrate-config.h  migrate-config.c
evo_ui/: CMakeLists.txt  evo-resources.xml  evo-sensors.c  evo-sensors.h  evo-settings.c  evo-settings.h  evo-ui-overrides.c  evo-ui-overrides.h  evo-ui.c  evo-ui.h  evo.ui  evo.ui~  hyscan-gtk-map-go.c  hyscan-gtk-map-go.h  hyscan-gtk-map-go.ui  hyscan-gtk-map-kit.c  hyscan-gtk-map-kit.h  hyscan-gtk-map-preload.c  hyscan-gtk-map-preload.h  hyscan-gtk-mark-export.c  hyscan-gtk-mark-export.h  hyscan-gtk-rec.c  record.ui  record.ui~  translate.sh
evo_ui/misc/locale/ru/LC_MESSAGES/: hyscanfnn-evoui.mo
evo_ui/po/: hyscanfnn-evoui.pot
evo_ui/po/ru/: hyscanfnn-evoui.po
example-ini/: dsse.ini  pf.ini
fnn/: CMakeLists.txt  app.c  app.rc  colormaps.h  common.ui  common.ui.h  common.ui~  configurator.c  launcher.c  launcher.rc  translate.sh
fnn/misc/locale/ru/LC_MESSAGES/: hyscan-499.mo
fnn/po/: hyscan-499.pot
fnn/po/ru/: hyscan-499.mo  hyscan-499.po  hyscan-499.po~
hw_ui/: CMakeLists.txt  ame-ui-definitions.h  ame-ui.c  ame-ui.h  cheese-flash-test.c  cheese-flash.c  cheese-flash.h  hw-ui-definitions.h  hw-ui.c  hw-ui.h
inis/: config.ini  flss.ini
libhyscaname/: CMakeLists.txt  colormaps.h  hyscan-ame-button.c  hyscan-ame-button.h  hyscan-ame-fixed.c  hyscan-ame-fixed.h  hyscan-ame-project.c  hyscan-ame-project.h  hyscan-ame-resources.xml  hyscan-ame-splash.c  hyscan-ame-splash.h  hyscan-fl-coords.c  hyscan-fl-coords.h  hyscan-gtk-ame-box.c  hyscan-gtk-ame-box.h  hyscan-gtk-mark-editor.h  hyscan-gtk-mark-editor.ui  hyscan-gtk-nav-indicator.c  hyscan-gtk-nav-indicator.h  hyscan-gtk-nav-indicator.ui  hyscan-gtk-project-viewer.c  hyscan-gtk-project-viewer.h  hyscan-gtk-project-viewer.ui  hyscan-mark-sync.c  hyscan-mark-sync.h  sonar-configure.c  sonar-configure.h  triple-types.h  triple.c
libhyscanfnn/: #hyscan-gtk-nav-indicator.ui#  CMakeLists.txt  fnn-param-proxy.c  fnn-param-proxy.h  fnn-types-common.h  fnn-types.h  fnn.c  hyscan-fl-coords.c  hyscan-fnn-button.c  hyscan-fnn-button.h  hyscan-fnn-fixed.c  hyscan-fnn-fixed.h  hyscan-fnn-fl.ui  hyscan-fnn-flog.c  hyscan-fnn-flog.h  hyscan-fnn-offsets.c  hyscan-fnn-offsets.h  hyscan-fnn-project.c  hyscan-fnn-project.h  hyscan-fnn-resources.xml  hyscan-fnn-splash.c  hyscan-fnn-splash.h  hyscan-gtk-actuator-control.c  hyscan-gtk-actuator-control.h  hyscan-gtk-actuator-control.ui  hyscan-gtk-con.c  hyscan-gtk-con.h  hyscan-gtk-con.ui  hyscan-gtk-configurator.c  hyscan-gtk-configurator.h  hyscan-gtk-dev-indicator.c  hyscan-gtk-dev-indicator.css  hyscan-gtk-dev-indicator.h  hyscan-gtk-fnn-box.c  hyscan-gtk-fnn-box.h  hyscan-gtk-fnn-export.c  hyscan-gtk-fnn-export.h  hyscan-gtk-fnn-export.ui  hyscan-gtk-fnn-gliko-wrapper.c  hyscan-gtk-fnn-gliko-wrapper.h  (+26 more)
libhyscanfnn/misc/locale/ru/LC_MESSAGES/: libhyscanfnn.mo
libhyscanfnn/po/: CMakeLists.txt  libhyscanfnn.pot
libhyscanfnn/po/ru/: libhyscanfnn.mo  libhyscanfnn.po  libhyscanfnn.po~
navigator/: CMakeLists.txt  hyscan-gtk-navigator-app.c  hyscan-gtk-navigator-app.h  hyscan-gtk-navigator-resources.xml  navigator.c
navigator/gtk/: menus.ui
sw_ui/: CMakeLists.txt  ame-ui.c  ame-ui.h  record.ui  record.ui.h  software-resources.xml  sw-ui.c  sw-ui.h  sw.ui  sw.ui.h
sw_ui/po/: hyscanfnn-swui.pot
sw_ui/po/ru/: hyscanfnn-swui.mo  hyscanfnn-swui.po  hyscanfnn-swui.po~
test/: CMakeLists.txt  ame-box-test.c  ame-fixed-test.c  ame-meter.c  button-emu.c  fnn-box-test.c  fnn-fixed-test.c  fnn-meter.c  fnn-project-test.c  mark-sync-test.c
triple/: CMakeLists.txt  ame-fixed-test.c  ame-project-test.c  ame-ui-definitions.h  ame-ui.c  ame-ui.h  app.c  common.ui  hyscan-ame-project.c  hyscan-ame-splash.c  hyscan-ame-splash.h  hyscan-fl-coords.c  hyscan-fl-coords.h  hyscan-gtk-forward-look.c  hyscan-mark-sync.c  hyscan-mark-sync.h  sonar-configure.c  sonar-configure.h  triple-resources.xml  triple-types.h  triple-types.h.bak  triple.c  triple.c.bak  triple.ui  ui-builder.h  ui.h
